kubernetes/apps/base/observability/exporters/blackbox-exporter/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.sstr.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Blackbox Exporter
    gethomepage.dev/icon: mdi-export-variant
    gethomepage.dev/pod-selector: app.kubernetes.io/name=prometheus-blackbox-exporter
spec:
  hostnames:
    - blackbox-exporter.${SECRET_MAIN_DOMAIN_NAME}
  parentRefs:
    - name: main
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: blackbox-exporter
          namespace: observability
          port: 9115
